--- a/app/static/tabpay_css/auth.css
+++ b/app/static/tabpay_css/auth.css
@@ -65,6 +65,7 @@ p {
   box-shadow: inset 0 1px 1px rgba(0, 123, 255, 0.075),
     0 0 8px rgba(65, 216, 80, 0.6);
 }
+.confirm-button,
 .button {
   margin-top: 20px;
   padding: 10px;
@@ -74,12 +75,12 @@ p {
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
-  width: 40%;
   margin: 5px auto;
-
   transition: background-color 0.3s;
 }
-
+.button {
+  width: 200px;
+}
 hr {
   border: 1px solid #000;
   margin: 20px 0;
