--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -160,7 +160,7 @@
                 class="{% if request.endpoint == 'settings' %}active{% endif %}"
                 ><i class="bi bi-gear-fill"></i> Settings</a
               >
-              <a href="{{ url_for('main.home') }}"
+              <a href="{{ url_for_security('logout') }}"
                 ><i class="bi bi-box-arrow-left"></i> Logout</a
               >
             </div>
@@ -180,11 +180,8 @@
                 <div class="profile-area">
                   <i class="bi bi-search me-2"></i>
                   <i class="bi bi-bell"></i>
-                  <img
-                    src="{{url_for('static',filename='images/image.png')}}"
-                    alt="Profile Picture"
-                  />
-                  <span>Cheruiyot</span>
+                  <img src="{{image_file}}" alt="Profile Picture" />
+                  <span>{{current_user.full_name}}</span>
                   <i class="bi bi-chevron-down"></i>
                 </div>
               </div>
@@ -203,10 +200,7 @@
         <input type="text" class="form-control ps-4" placeholder="Search" />
       </div>
 
-      <img
-        src="{{url_for('static',filename='images/image.png')}}"
-        alt="Profile Picture"
-      />
+      <img src="{{image_file}}" alt="Profile Picture" />
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
