--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -1,15 +1,62 @@
-{% extends "security/base.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field, render_field_errors, render_form_errors %}
+{% extends 'security/base.html' %} {% from "security/_macros.html" import
+render_field_with_errors, render_field, render_field_errors, render_form_errors
+%} {% block content %}
+<div class="container-fluid">
+  <div class="main-container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="image-section"></div>
+      </div>
+      <div class="col-lg-6">
+        <div class="head-form">
+          <div class="p-4">
+            <h1>Forgot Password</h1>
+            <p>New Password</p>
+          </div>
+          <hr />
+          {% with messages = get_flashed_messages(with_categories=true) %} {% if
+          messages %}
+          <div class="container mt-3">
+            {% for category, message in messages %}
+            <div
+              class="alert alert-{{ category }} alert-dismissible fade show d-flex justify-content-between"
+              role="alert"
+            >
+              {{ message }}
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"
+              ></button>
+            </div>
+            {% endfor %}
+          </div>
+          {% endif %} {% endwith %}
+          <form
+            action="{{ url_for_security('forgot_password') }}"
+            method="post"
+            name="forgot_password_form"
+          >
+            {{ forgot_password_form.hidden_tag() }} {{
+            render_form_errors(forgot_password_form) }}
 
-{% block content %}
-  {% include "security/_messages.html" %}
-  <h1>{{ _fsdomain('Send password reset instructions') }}</h1>
-  <form action="{{ url_for_security('forgot_password') }}" method="post" name="forgot_password_form">
-    {{ forgot_password_form.hidden_tag() }}
-    {{ render_form_errors(forgot_password_form) }}
-    {{ render_field_with_errors(forgot_password_form.email) }}
-    {{ render_field_errors(forgot_password_form.csrf_token) }}
-    {{ render_field(forgot_password_form.submit) }}
-  </form>
-  {% include "security/_menu.html" %}
-{% endblock content %}
+            <div class="form-section">
+              <div>
+                {{
+                render_field_with_errors(forgot_password_form.email,class="input")
+                }}
+              </div>
+              <div class="d-flex justify-content-center">
+                {{ render_field_errors(forgot_password_form.csrf_token) }} {{
+                render_field(forgot_password_form.submit,class="button") }}
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
