--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -83,7 +83,7 @@
 
         <a
           href="{{url_for('main.statistics')}}"
-          style="background-color: {% if 'Dashboard' in title %} rgb(76, 147, 35) {% endif %}; 
+          style="background-color: {% if 'Dashboard' in title %}rgba(70, 162, 16, 0.873) {% endif %}; 
                border-radius: 5px; 
                color: white;"
         >
@@ -132,7 +132,7 @@
             <div class="links mt-3">
               <a
                 href="{{url_for('main.statistics')}}"
-                style="background-color: {% if 'Dashboard' in title %} rgb(3, 185, 3) {% endif %}; 
+                style="background-color: {% if 'Dashboard' in title %} rgba(70, 162, 16, 0.873) {% endif %}; 
                    border-radius: 5px; 
                    color: white;"
               >
