--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -44,7 +44,7 @@ render_field_with_errors, render_field, render_field_errors, render_form_errors
             <div class="form-section">
               <div>
                 {{
-                render_field_with_errors(forgot_password_form.email,class="input")
+                render_field_with_errors(forgot_password_form.email,class="input",placeholder="hello@reallygreatsite.com")
                 }}
               </div>
               <div class="d-flex justify-content-center">
