--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -388,15 +388,20 @@ endblock %} {% block content %}
               </div>
             </div>
             {{ member_form.submit(class="submit-btn") }} 
-                        <p class="success-message mt-3">{% with messages = get_flashed_messages() %}
-                          {% if messages %}
-                              <ul>
-                              {% for message in messages %}
-                                  <li>{{ message }}</li>
-                              {% endfor %}
-                              </ul>
-                          {% endif %}
-                      {% endwith %}</p>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="container mt-3" id="flash-container" style="max-width: 500px;"> <!-- Adjust the max-width here -->
+              {% for category, message in messages %}
+              <div
+                class="alert alert-{{ category }} alert-dismissible fade show"
+                role="alert"
+              >
+                {{ message }}
+              </div>
+              {% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
           </form>
         </div>
 
