--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,23 +91,23 @@
         </a>
         <a
           href="{{ url_for('main.manage_contribution') }}"
-          class="{% if request.endpoint == 'manage_contribution' %}active{% endif %}"
+          class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
           ><i class="bi bi-currency-exchange"></i> Contribute</a
         >
         <a
           href="{{ url_for('main.host') }}"
-          class="{% if request.endpoint == 'host' %}active{% endif %}"
+          class="{% if request.endpoint == 'main.host' %}active{% endif %}"
           ><i class="bi bi-house-fill"></i> Host</a
         >
         <a
           href="{{ url_for('main.block_reports') }}"
-          class="{% if request.endpoint == 'block_reports' %}active{% endif %}"
+          class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
           ><i class="bi bi-bar-chart-fill"></i> Reports</a
         >
         <div class="sidebar-bottom">
           <a
             href="{{ url_for('main.settings') }}"
-            class="{% if request.endpoint == 'settings' %}active{% endif %}"
+            class="{% if request.endpoint == 'main.settings' %}active{% endif %}"
             ><i class="bi bi-gear-fill"></i> Settings</a
           >
           <a href="{{ url_for('main.home') }}"
@@ -140,24 +140,24 @@
               </a>
               <a
                 href="{{ url_for('main.manage_contribution') }}"
-                class="{% if request.endpoint == 'manage_contribution' %}active{% endif %}"
+                class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
                 ><i class="bi bi-currency-exchange"></i> Contribute</a
               >
               <a
                 href="{{ url_for('main.host') }}"
-                class="{% if request.endpoint == 'host' %}active{% endif %}"
+                class="{% if request.endpoint == 'main.host' %}active{% endif %}"
                 ><i class="bi bi-house-fill"></i> Host</a
               >
               <a
                 href="{{ url_for('main.block_reports') }}"
-                class="{% if request.endpoint == 'block_reports' %}active{% endif %}"
+                class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
                 ><i class="bi bi-bar-chart-fill"></i> Reports</a
               >
             </div>
             <div class="sidebar-bottom">
               <a
                 href="{{ url_for('main.settings') }}"
-                class="{% if request.endpoint == 'settings' %}active{% endif %}"
+                class="{% if request.endpoint == 'main.settings' %}active{% endif %}"
                 ><i class="bi bi-gear-fill"></i> Settings</a
               >
               <a href="{{ url_for_security('logout') }}"
