--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -21,7 +21,7 @@
             <div class="container mt-3" id="flash-container">
               {% for category, message in messages %}
               <div
-                class="alert alert-{{ category }} alert-dismissible fade show"
+                class="alert alert-{{ category }} alert-dismissible fade show bg-info"
                 role="alert"
               >
                 {{ message }}
