create logic for host

--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -1,6 +1,9 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
 render_field_with_errors, render_field, render_form_errors, render_field_errors
-%} {% block content %}
+%} 
+{% block title %}Tabpay | Register {% endblock %}
+
+{% block content %}
 <div class="container-fluid">
   <div class="main-container">
     <div class="row">
