--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -51,59 +51,58 @@
               Schedule the Weekly Block Meeting
             </p>
             <form method="POST" action="{{ url_for('main.schedule_meeting') }}">
+              {{schedule_form.hidden_tag() }}
               <div class="row">
                   <div class="col-md-6">
                       <div class="mb-3">
-                        <label for="blockNumber">Select the relevant Block</label>
-                        <select id="blockNumber" name="block_id" class="select" aria-label="Select Block">
-                            <option value="" disabled selected>(e.g., Block 1)</option> <!-- Placeholder option -->
-                            {% for block in blocks %}
-                                <option value="{{ block.id }}">{{ block.name }}</option>
-                            {% endfor %}
-                        </select>
+                        {{ schedule_form.block.label }} {{ schedule_form.block(class="select") }}
                         
                       </div>
                   </div>
                   <div class="col-md-6">
                       <div class="mb-3">
-                          <label for="zone">Select the zone</label>
-                          <select id="zone" name="zone_id" class="select" aria-label="Select the zone">
-                              {% for zone in zones %}
-                                  <option value="{{ zone.id }}">{{ zone.name }}</option>
-                              {% endfor %}
-                          </select>
+                        {{ schedule_form.zone.label }} {{ schedule_form.zone(class="select") }}
+                        
                       </div>
                   </div>
               </div>
               <div class="row">
                   <div class="col-md-6">
-                      <label for="member">Select the member</label>
-                      <select id="member" name="member" class="select">
-                          {% for member in members %}
-                              <option value="{{ member.id }}">{{ member.full_name }}</option>
-                          {% endfor %}
-                      </select>
+                    {{ schedule_form.member.label }} {{ schedule_form.member(class="select") }}
+                        
                   </div>
                   <div class="col-md-6">
-                      <label for="date">Pick the date</label>
-                      <input type="date" name="meeting_date" id="date" class="control" />
+                    {{ schedule_form.date.label }} {{ schedule_form.date(class="input") }}
+                        
                   </div>
               </div>
-              <button type="submit" class="submit-btn">SCHEDULE</button>
-              <p class="success-message mt-3">Success Message</p>
-          </form>
+              {{schedule_form.submit(class="submit-btn")}}
+              {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+              <div class="container mt-3" id="flash-container" style="max-width: 500px;">
+                {% for category, message in messages %}
+                <div
+                  class="alert alert-{{ category }} alert-dismissible fade show"
+                  role="alert"
+                >
+                  {{ message }}
+                </div>
+                {% endfor %}
+              </div>
+              {% endif %}
+              {% endwith %} 
+                     </form>
           
-          </div>
-          
+          </div>         
   
           <!--/ Schedule Weekly Block Meeting -->
-  
+
           <!-- Upcoming Block -->
-          <div id="Upcoming-Block" class="tab-pane fade show">
+           <div id="Upcoming-Block" class="tab-pane fade show">
             <h5 class="text-center mt-2 mb-1">Upcoming Block</h5>
-            <form action="{{url_for('main.upcoming_meetings')}}" method="get">
+            <form action="{{url_for('main.host')}}" method="get">
   
-            <div class="row pb-2 pt-1">
+            <div class="row pb-2 pt-1"> 
                 <!-- Block Details Section -->
                 <div class="col-md-6 d-flex justify-content-center">
                     <div class="card p-4 ">
@@ -113,7 +112,7 @@
                         <p><strong>The Host:</strong> {{host}}</p>
                         <p><strong>When:</strong>{{when}}</p>
                         <button type="button" class="payment-link-btn" onclick="generatePaymentLink()">GENERATE PAYMENT LINK</button>
-                        <div class="payment-link-container" id="paymentLinkContainer" style="display: none;" >
+                        <div class="payment-link-container" id="paymentLinkContainer"  >
                             <span class="payment-text" id="paymentLinkText">{{paymentlink }}</span>
                             <button class="copy-button" onclick="copyToClipboard()">COPY</button>
                         </div>
@@ -131,7 +130,8 @@
                             rows="6"
                             style="height: 150px"
                         >
-                        Dear Member, Upcoming block is hosted by {{zone}} zone and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
+                      Dear Member, 
+                      Upcoming block is hosted by {{zone}} zone and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
   
                       </textarea>
         
@@ -142,36 +142,9 @@
           </form>
         </div>
         
-        <!-- <script>
-            // Function to generate a payment link
-            function generatePaymentLink() {
-                // You can generate a unique link here if needed
-                const paymentLinkContainer = document.getElementById('paymentLinkContainer');
-                paymentLinkContainer.style.display = 'block';
-            }
-        
-            // Function to copy payment link to clipboard
-            function copyToClipboard() {
-                const paymentLinkText = document.getElementById('paymentLinkText').innerText;
-                navigator.clipboard.writeText(paymentLinkText).then(() => {
-                    alert('Payment link copied to clipboard!');
-                }).catch(err => {
-                    console.error('Failed to copy: ', err);
-                });
-            }
-        
-            // Function to send the message
-            function sendMessage() {
-                const message = document.getElementById('message').value;
-                // Here you can add the logic to send the message
-                console.log('Sending message:', message);
-                alert('Message sent successfully!'); // Simulating a successful send
-            }
-        </script> -->
-        
+      <!--/ upcoming Block -->
   
-          <!--/ upcoming Block -->
-  
+
           <!-- Block Members -->
   
           <div id="Block-Members" class="tab-pane fade show ps-4 pb-2">
@@ -182,18 +155,10 @@
             <div class="flex-container mt-4">
                 <div class="row">
                     <div class="col-md-3" style="max-width: fit-content;">
-                        <select class="select" id="blockSelect" aria-label="Select Block" onchange="filterMembers()">
-                          {% for block in blocks %}
-                          <option value="{{ block.id }}">{{ block.name }}</option>
-                      {% endfor %}
-                        </select>
+                      {{ schedule_form.block.label }} {{ schedule_form.block(class="select") }}
                     </div>
                     <div class="col-md-3" style="max-width: fit-content;">
-                        <select class="select" id="zoneSelect" aria-label="Select Zone" onchange="filterMembers()">
-                          {% for zone in zones %}
-                          <option value="{{ zone.id }}">{{ zone.name }}</option>
-                      {% endfor %}
-                        </select>
+                      {{ schedule_form.zone.label }} {{ schedule_form.zone(class="select") }}
                     </div>
                 </div>
             </div>
@@ -232,76 +197,67 @@
             </table>
         </div>
         
-        
-        
+         <!--/ Block Members -->
+
+               <!-- Contribution Status -->
   
-          <!--/ Block Members -->
-  
-          <!-- Contribution Status -->
-  
-          <div id="Contribution-Status" class="tab-pane fade show">
+               <div id="Contribution-Status" class="tab-pane fade show">
      
-              <h4
-              style="
-                font-weight: 500;
-                color: rgb(0, 0, 0);
-                letter-spacing: 2px;
-                text-decoration: underline;
-                font-size: large;
-              "
-            >
-              Filter By:
-            </h4>
-          
-            <div class="flex-container mt-4">
-              <div class="row">
-                <div class="col-md-3"  style="max-width: fit-content;">
-                  <select class="select" aria-label="Select Block">
-                    {% for block in blocks %}
-                    <option value="{{ block.id }}">{{ block.name }}</option>
-                {% endfor %}
-                  </select>
-                </div>
-                <div class="col-md-3"  style="max-width: fit-content;">
-                  <select class="select" aria-label="Select Zone">
-                    {% for zone in zones %}
-                          <option value="{{ zone.id }}">{{ zone.name }}</option>
-                      {% endfor %}
-                  </select>
-                </div>
-          
-                <div class="col-md-3 tt-contributed"  style="max-width: fit-content;">
-                  Total Contributed:
-                  <span style="color: rgb(14, 169, 14);text-wrap: nowrap;"> Kes 200,000</span>
+                <h4
+                style="
+                  font-weight: 500;
+                  color: rgb(0, 0, 0);
+                  letter-spacing: 2px;
+                  text-decoration: underline;
+                  font-size: large;
+                "
+              >
+                Filter By:
+              </h4>
+            
+              <div class="flex-container mt-4">
+                <div class="row">
+                  <div class="col-md-3"  style="max-width: fit-content;">
+                    {{ schedule_form.block.label }} {{ schedule_form.block(class="select") }}
+                  </div>
+                  <div class="col-md-3"  style="max-width: fit-content;">
+                    {{ schedule_form.zone.label }} {{ schedule_form.zone(class="select") }}
+                  </div>
+            
+                  <div class="col-md-3 tt-contributed"  style="max-width: fit-content;">
+                    Total Contributed:
+                    <span style="color: rgb(14, 169, 14);text-wrap: nowrap;"> Kes 200,000</span>
+                  </div>
                 </div>
               </div>
+              <table class="table table-responsive text-center">
+                <thead>
+                  <tr>
+                    <th>Full Names</th>
+                    <th>Status</th>
+                    <th>Amount</th>
+                    <th>Send reminder</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for member in members %}
+                  <tr>
+                    <td>{{member.full_name}}</td>
+                    <td>Pending</td>
+                    <td>Kes 0.00</td>
+                    <td><button class="btn " style="background-color: #4c9323;color: white;">SEND</button></td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
             </div>
-            <table class="table table-responsive text-center">
-              <thead>
-                <tr>
-                  <th>Full Names</th>
-                  <th>Status</th>
-                  <th>Amount</th>
-                  <th>Send reminder</th>
-                </tr>
-              </thead>
-              <tbody>
-  
-                </>
-                <tr>
-                  <td>Benard Ronoh</td>
-                  <td>Pending</td>
-                  <td>Kes 0.00</td>
-                  <td><button class="btn " style="background-color: #4c9323;color: white;">SEND</button></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-  
-          <!--/  Contribution Status -->
-  
-          <!--  Analytics -->
+    
+            <!--/  Contribution Status -->
+    
+              <!--  Analytics -->
           <div id="Analytics" class="tab-pane fade show ps-4">
+            <div class="d-flex justify-content-center">
+              <div>
             <h4
                 style="
                     font-weight: 500;
@@ -317,54 +273,80 @@
             <div class="flex-container mt-4">
               <div class="row mb-3">
                   <div class="col-md-6" style="max-width: fit-content;">
-                      <select class="select" aria-label="Select Block" onchange="updateSelectedBlock(this.value)">
-                          {% for block in blocks %}
-                              <option value="{{ block.id }}">{{ block.name }}</option>
-                          {% endfor %}
-                      </select>
+                    {{ schedule_form.block.label }} {{ schedule_form.block(class="select") }}
                   </div>
                   <div class="col-md-6" style="max-width: fit-content;">
-                      <select class="select" aria-label="Select Zone">
-                          {% for zone in zones %}
-                              <option value="{{ zone.id }}">{{ zone.name }}</option>
-                          {% endfor %}
-                      </select>
+                    {{ schedule_form.zone.label }} {{ schedule_form.zone(class="select") }}
                   </div>
               </div>
-              {% if block %}
-                  <p><strong>Block:</strong> {{ block.name }}</p>
-              {% else %}
-                  <p>No block selected.</p>
-              {% endif %}
+          
           </div>
           
           
         
             <!-- Contribution Overview Section -->
-            <div class="mt-3 ms-auto">
-                <div class="d-flex mb-4">
-                    <h3 style="font-weight: bold;">Contribution Overview</h3>
-                    <button
-                        style="color: white; background-color: #94989c; border: none; margin-left: 20px; border-radius: 5px;">
-                        This Week
-                    </button>
-                </div>
-        
-                <!-- Display Analytics Data Without JavaScript -->
-                <div class="contribution-overview">
-                    <p><strong>Block:</strong> {{ block.name }}</p>
-                    <p><strong>Total Meetings:</strong> {{ total_meetings }}</p>
-                    <p><strong>Successful Meetings:</strong> {{ successful_meetings }}</p>
-                    <p><strong>Average Participation Rate:</strong> {{ average_participation_rate | round(2) * 100 }}%</p>
-                </div>
+            <div class="mt-3 ms-auto  ">
+              <div class="d-flex mb-4 ">
+                <h3 style="font-weight: bold;">Contribution Overview</h3>
+                <button
+                 
+                  style="color: white; background-color: #94989c;border: none;margin-left: 20px;border-radius: 5px;"
+                >
+                  This Week
+                </button>
+              </div>
+              <div class="host-chart" style="height: 350px; width: 350px ;">
+                <canvas id="contributionChart"></canvas>
+              </div>
             </div>
-        </div>
-        
+          </div>
   
+          
+          <script>
+            const ctx = document
+              .getElementById("contributionChart")
+              .getContext("2d");
+            const contributionChart = new Chart(ctx, {
+              type: "doughnut",
+              data: {
+                labels: ["Contributed", "Pending"],
+                datasets: [
+                  {
+                    label: "Contribution Overview",
+                    data: [512, 245],
+                    backgroundColor: ["orange", "red"],
+                    borderWidth: 1,
+                  },
+                ],
+              },
+              options: {
+                responsive: true,
+                plugins: {
+                  legend: {
+                    position: "bottom",
+                  },
+                },
+              },
+            });
+          </script>
+  
+      
+        
+   
+</div>
+</div>
+</div>
           <!--/  Analytics -->
-        </div>
+
       </div>
     </div>
   </div>
-  
+  <script>
+    setTimeout(function() {
+      const flashContainer = document.getElementById('flash-container');
+      if (flashContainer) {
+        flashContainer.style.display = 'none';  // Hide the container after 5 seconds
+      }
+    }, 5000);  // 5000 milliseconds = 5 seconds
+  </script>
   {% endblock %}
