--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -1,6 +1,9 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
 render_field_with_errors, render_field, render_field_errors, render_form_errors
-%} {% block content %}
+%}
+{% block title %}Tabpay | Forgot Password {% endblock %}
+
+{% block content %}
 <div class="container-fluid">
   <div class="main-container">
     <div class="row">
