--- a/app/templates/security/send_confirmation.html
+++ b/app/templates/security/send_confirmation.html
@@ -1,5 +1,8 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
-render_field_with_errors, render_field %} {% block content %}
+render_field_with_errors, render_field %}
+{% block title %}Tabpay | Confirm Email {% endblock %}
+
+{% block content %}
 <div class="container-fluid">
   <div class="main-container">
     <div class="row">
