--- a/app/static/tabpay_css/dashboard.css
+++ b/app/static/tabpay_css/dashboard.css
@@ -141,7 +141,7 @@ html {
 
 .nav-tabs .nav-item:first-child {
   border-left: 2px solid black;
-  border-top-left-radius: 10px;
+  /* border-top-left-radius: 10px; */
 }
 .tab-content {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
