modify ofcanvas sidebar,add confirm, add bank model

--- a/app/static/tabpay_css/dashboard.css
+++ b/app/static/tabpay_css/dashboard.css
@@ -402,7 +402,9 @@ table {
     padding: 0;
     padding-bottom: 100px;
   }
-
+  .logo {
+    width: 150px;
+  }
   .dashboard-h1 {
     font-size: xx-large;
   }
