--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -64,8 +64,12 @@
                  {{ render_field_errors(login_user_form.csrf_token) }}
                 {{ render_field(login_user_form.submit, class="button") }}
               </div>
-             
               </div>
+             
+              <div class="d-flex justify-content-center">              
+                <a href="{{ url_for_security('send_confirmation') }}" style="color: green ;">{{ _fsdomain('Confirm account') }}</a>
+            </div>
+            
              
             </form>
 
